--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -70,11 +70,17 @@
     <Compile Include="Admin.Designer.cs">
       <DependentUpon>Admin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Kassa2.cs">
+    <Compile Include="Omanik.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Kassa2.Designer.cs">
-      <DependentUpon>Kassa2.cs</DependentUpon>
+    <Compile Include="Omanik.Designer.cs">
+      <DependentUpon>Omanik.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tabs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tabs.Designer.cs">
+      <DependentUpon>Tabs.cs</DependentUpon>
     </Compile>
     <Compile Include="Warehouse.cs">
       <SubType>Form</SubType>
@@ -82,11 +88,11 @@
     <Compile Include="Warehouse.Designer.cs">
       <DependentUpon>Warehouse.cs</DependentUpon>
     </Compile>
-    <Compile Include="Kassa1.cs">
+    <Compile Include="Kassa.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Kassa1.Designer.cs">
-      <DependentUpon>Kassa1.cs</DependentUpon>
+    <Compile Include="Kassa.Designer.cs">
+      <DependentUpon>Kassa.cs</DependentUpon>
     </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -105,11 +111,14 @@
     <EmbeddedResource Include="Admin.resx">
       <DependentUpon>Admin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Omanik.resx">
+      <DependentUpon>Omanik.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Warehouse.resx">
       <DependentUpon>Warehouse.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Kassa1.resx">
-      <DependentUpon>Kassa1.cs</DependentUpon>
+    <EmbeddedResource Include="Kassa.resx">
+      <DependentUpon>Kassa.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -149,6 +158,10 @@
       <DependentUpon>Tooded_DB.mdf</DependentUpon>
     </Content>
     <Content Include="Images\about.png" />
+    <Content Include="Images\Admin.png" />
+    <Content Include="Images\Kassa.png" />
+    <Content Include="Images\Ladu.png" />
+    <Content Include="Images\Logout.png" />
     <Content Include="Images\Pepsi.png" />
     <Content Include="Images\piim.png" />
     <Content Include="Kat_Images\Ajatooded.jpg" />
